Don't use range-based for-loop if we're not going to loop.

Triggered a compliation warning about unreachable code (->error) with
MSVC here:
https://ci.chromium.org/buildbot/chromium.win/WinMSVC64%20(dbg)/1977

The following piece of code generates a similar warning also with
clang++, with parameters: --std=c++14 -Wunreachable-code-loop-increment

  std::vector<int> vec;
  for (const auto& item : vec) {
    (void)item;
    break;
  }

Bug: 802222
Change-Id: I0c293e15e4dfe6015521872be4b9df2358fb08ce
TBR=kojii@chromium.org